@@ -66,17 +66,15 @@
 #  include <openssl/rsa.h>
 
 #  ifndef _WIN32_WINNT
-#   define _WIN32_WINNT 0x0600
+#   define _WIN32_WINNT 0x0400
 #  endif
 
 #  include <windows.h>
 #  include <wincrypt.h>
 #  include <malloc.h>
-#  include <shlwapi.h>
 #  ifndef alloca
 #   define alloca _alloca
 #  endif
-#  pragma comment(lib, "shlwapi.lib")
 
 /*
  * This module uses several "new" interfaces, among which is
@@ -142,96 +140,6 @@
 
 # include "e_capi_err.h"
 # include "e_capi_err.c"
-
-char lastUsedAuthCacheHash[100] = {0};
-
- void TSVN_GetSHA1HashFromX509(STACK_OF(X509_NAME) *ca_dn, char * outbuf)
- {
-     HCRYPTPROV hProv = 0;
-     HCRYPTHASH hHash = 0;
-     DWORD cbHash = 0;
-     BYTE rgbHash[20];
-     char sha1hashstring[50];
-     CHAR rgbDigits[] = "0123456789abcdef";
-     int i;
-     X509_NAME * nm;
-
-     outbuf[0] = 0;
-     if (CryptAcquireContext(&hProv,
-         NULL,
-         NULL,
-         PROV_RSA_FULL,
-         CRYPT_VERIFYCONTEXT))
-     {
-         if (CryptCreateHash(hProv, CALG_SHA1, 0, 0, &hHash))
-         {
-             for (i = 0; i < sk_X509_NAME_num(ca_dn); ++i)
-             {
-                 nm = sk_X509_NAME_value(ca_dn, i);
-                 CryptHashData(hHash, nm->canon_enc, nm->canon_enclen, 0);
-             }
-
-             cbHash = 20;
-             if (CryptGetHashParam(hHash, HP_HASHVAL, rgbHash, &cbHash, 0))
-             {
-                 for (i = 0; i < (int)cbHash; ++i)
-                 {
-                     sha1hashstring[i*2]   = rgbDigits[rgbHash[i] >> 4];
-                     sha1hashstring[i*2+1] = rgbDigits[rgbHash[i] & 0xf];
-                 }
-                 sha1hashstring[cbHash] = 0;
-                 strcpy(outbuf, sha1hashstring);
-             }
-             CryptDestroyHash(hHash);
-         }
-         CryptReleaseContext(hProv, 0);
-     }
- }
-
- int TSVN_GetSavedIndexForHash(const char* hash)
- {
-     int ret = -1;
-     DWORD dwType = 0;
-     DWORD dwData = 0;
-     DWORD dwDataSize = 4;
-     int bLoad = 1;
-     if (SHGetValueA(HKEY_CURRENT_USER, "Software\\TortoiseSVN\\CAPIAuthz", hash, &dwType, &dwData, &dwDataSize) == ERROR_SUCCESS)
-     {
-         if (dwType == REG_DWORD)
-         {
-             ret = (int)dwData;
-         }
-     }
-     return ret;
- }
-
- void TSVN_SaveIndexForHash(const char* hash, int index)
- {
-     DWORD value = index;
-     SHSetValueA(HKEY_CURRENT_USER, "Software\\TortoiseSVN\\CAPIAuthz", hash, REG_DWORD, &value, sizeof(value));
- }
-
- void TSVN_ClearLastUsedAuthCache()
- {
-     SHDeleteValueA(HKEY_CURRENT_USER, "Software\\TortoiseSVN\\CAPIAuthz", lastUsedAuthCacheHash);
- }
-
- BOOL CALLBACK FindWindoProc(HWND hwnd, LPARAM lParam)
- {
-     HWND * pWnd;
-     DWORD pid = 0;
-     if ((GetWindowLongPtr(hwnd, GWL_STYLE) & WS_VISIBLE))
-     {
-         GetWindowThreadProcessId(hwnd, &pid);
-         if (pid == GetCurrentProcessId())
-         {
-             pWnd = (HWND*)lParam;
-             (*pWnd) = hwnd;
-             return FALSE;
-         }
-     }
-     return TRUE;
- }
 
 static const char *engine_capi_id = "capi";
 static const char *engine_capi_name = "CryptoAPI ENGINE";
@@ -683,22 +591,6 @@ static ENGINE *engine_capi(void)
 
 void ENGINE_load_capi(void)
 {
-    DWORD dwType = 0;
-    DWORD dwData = 0;
-    DWORD dwDataSize = 4;
-    int bLoad = 1;
-    if (SHGetValueA(HKEY_CURRENT_USER, "Software\\TortoiseSVN", "OpenSSLCapi", &dwType, &dwData, &dwDataSize) == ERROR_SUCCESS)
-    {
-        if (dwType == REG_DWORD)
-        {
-            if (dwData == 0)
-            {
-                bLoad = 0;
-            }
-        }
-    }
-    if (bLoad)
-    {
     /* Copied from eng_[openssl|dyn].c */
     ENGINE *toadd = engine_capi();
     if (!toadd)
@@ -706,7 +598,6 @@ void ENGINE_load_capi(void)
     ENGINE_add(toadd);
     ENGINE_free(toadd);
     ERR_clear_error();
-    }
 }
 # endif
 
@@ -1215,6 +1106,10 @@ static int capi_get_provname(CAPI_CTX * ctx, LPSTR * pname, DWORD * ptype,
         name = alloca(len);
     else
         name = OPENSSL_malloc(len);
+    if (name == NULL) {
+        CAPIerr(CAPI_F_CAPI_GET_PROVNAME, ERR_R_MALLOC_FAILURE);
+        return 0;
+    }
     if (!CryptEnumProviders(idx, NULL, 0, ptype, name, &len)) {
         err = GetLastError();
         if (err == ERROR_NO_MORE_ITEMS)
@@ -1395,6 +1290,10 @@ char *capi_cert_get_fname(CAPI_CTX * ctx, PCCERT_CONTEXT cert)
         (cert, CERT_FRIENDLY_NAME_PROP_ID, NULL, &dlen))
         return NULL;
     wfname = OPENSSL_malloc(dlen);
+    if (wfname == NULL) {
+        CAPIerr(CAPI_F_CAPI_CERT_GET_FNAME, ERR_R_MALLOC_FAILURE);
+        return NULL;
+    }
     if (CertGetCertificateContextProperty
         (cert, CERT_FRIENDLY_NAME_PROP_ID, wfname, &dlen)) {
         char *fname = wide_to_asc(wfname);
@@ -1545,6 +1444,11 @@ static CAPI_KEY *capi_get_key(CAPI_CTX * ctx, const TCHAR *contname,
     CAPI_KEY *key;
     DWORD dwFlags = 0;
     key = OPENSSL_malloc(sizeof(CAPI_KEY));
+    if (key == NULL) {
+        CAPIerr(CAPI_F_CAPI_GET_KEY, ERR_R_MALLOC_FAILURE);
+        capi_addlasterror();
+        goto err;
+    }
     if (sizeof(TCHAR) == sizeof(char))
         CAPI_trace(ctx, "capi_get_key, contname=%s, provname=%s, type=%d\n",
                    contname, provname, ptype);
@@ -1562,14 +1466,10 @@ static CAPI_KEY *capi_get_key(CAPI_CTX * ctx, const TCHAR *contname,
     }
     if (ctx->store_flags & CERT_SYSTEM_STORE_LOCAL_MACHINE)
         dwFlags = CRYPT_MACHINE_KEYSET;
-    // first try enhanced version
-    if(!CryptAcquireContext(&key->hprov, contname, MS_ENH_RSA_AES_PROV, PROV_RSA_AES, dwFlags))
-    {
-        if (!CryptAcquireContext(&key->hprov, contname, provname, ptype, dwFlags)) {
-            CAPIerr(CAPI_F_CAPI_GET_KEY, CAPI_R_CRYPTACQUIRECONTEXT_ERROR);
-            capi_addlasterror();
-            goto err;
-        }
+    if (!CryptAcquireContext(&key->hprov, contname, provname, ptype, dwFlags)) {
+        CAPIerr(CAPI_F_CAPI_GET_KEY, CAPI_R_CRYPTACQUIRECONTEXT_ERROR);
+        capi_addlasterror();
+        goto err;
     }
     if (!CryptGetUserKey(key->hprov, keyspec, &key->key)) {
         CAPIerr(CAPI_F_CAPI_GET_KEY, CAPI_R_GETUSERKEY_ERROR);
@@ -1793,7 +1693,6 @@ static int capi_load_ssl_client_cert(ENGINE *e, SSL *ssl,
     PCCERT_CONTEXT cert = NULL, excert = NULL;
     CAPI_CTX *ctx;
     CAPI_KEY *key;
-    char hash[100];
     ctx = ENGINE_get_ex_data(e, capi_idx);
 
     *pcert = NULL;
@@ -1850,21 +1749,8 @@ static int capi_load_ssl_client_cert(ENGINE *e, SSL *ssl,
         return 0;
 
     /* Select the appropriate certificate */
-    TSVN_GetSHA1HashFromX509(ca_dn, hash);
-    strcpy(lastUsedAuthCacheHash, hash);
-    client_cert_idx = TSVN_GetSavedIndexForHash(hash);
-    if ((client_cert_idx < 0) || (client_cert_idx >= sk_X509_num(certs)))
-    {
-        client_cert_idx = ctx->client_cert_select(e, ssl, certs);
-        if (client_cert_idx >= 0)
-        {
-            TSVN_SaveIndexForHash(hash, client_cert_idx);
-        }
-    }
-    else if (client_cert_idx >= sk_X509_num(certs))
-    {
-        TSVN_ClearLastUsedAuthCache();
-    }
+
+    client_cert_idx = ctx->client_cert_select(e, ssl, certs);
 
     /* Set the selected certificate and free the rest */
 
@@ -1898,9 +1784,7 @@ static int capi_load_ssl_client_cert(ENGINE *e, SSL *ssl,
 
 static int cert_select_simple(ENGINE *e, SSL *ssl, STACK_OF(X509) *certs)
 {
-        if (sk_X509_num(certs) == 1)
-            return 0;
-        return -1; /* let TSVN decide which certificate to use */
+    return 0;
 }
 
 # ifdef OPENSSL_CAPIENG_DIALOG
@@ -1920,7 +1804,7 @@ static int cert_select_simple(ENGINE *e, SSL *ssl, STACK_OF(X509) *certs)
 #   define CRYPTUI_SELECT_INTENDEDUSE_COLUMN                0x000000004
 #  endif
 
-#  define dlg_title L"TortoiseSVN SSL Client Certificate Selection"
+#  define dlg_title L"OpenSSL Application SSL Client Certificate Selection"
 #  define dlg_prompt L"Select a certificate to use for authentication"
 #  define dlg_columns      CRYPTUI_SELECT_LOCATION_COLUMN \
                         |CRYPTUI_SELECT_INTENDEDUSE_COLUMN
@@ -1958,9 +1842,7 @@ static int cert_select_dialog(ENGINE *e, SSL *ssl, STACK_OF(X509) *certs)
         }
 
     }
-    EnumWindows(FindWindoProc, (LPARAM)&hwnd);
-    if (!hwnd)
-        hwnd = GetForegroundWindow();
+    hwnd = GetForegroundWindow();
     if (!hwnd)
         hwnd = GetActiveWindow();
     if (!hwnd && ctx->getconswindow)
